--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
     </div>
 
-    <footer class="Footer bg-dark text-white text-center p-3">
+    <footer class="footer bg-transparent text-black text-center p-3">
         <p>&copy; 2025 Jose Alfonzo. All rights reserved.</p>
     </footer>
 
