--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="col-md-8">
                     <h1>Welcome to My Portfolio</h1>
                     <p>
-                        I am <strong>Jose Alfonzo</strong>, a driven <strong>AI Engineer & Computer Scientist</strong>
+                        I am <strong>Jose Alfonzo</strong>, a Bachelor in <strong>Artificial intelligence and Computer science</strong>
                         passionate about leveraging technology to solve real-world challenges.
                         With expertise in <strong>Machine Learning, Deep Learning, and Full-Stack Development</strong>,
                         I thrive at the intersection of innovation and problem-solving.
